--- a/front.html
+++ b/front.html
@@ -158,6 +158,8 @@
 </div>
 
 <footer>
-    <p class='footp'>Charlie Tharin</p>
+      <p class='footp'>Charlie Tharin</p>
     <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
-  </footer>
+
+</footer>
+</html>
