--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 
 <footer>
     <p class='footp'>Charlie Tharin</p>
-    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
+    <p class='footp'>Email: cbtharin@gmail.com</p>
+    <p class='footp'>Phone: 702-292-3345</p>
   </footer>
 
 
