--- a/resume.html
+++ b/resume.html
@@ -162,9 +162,10 @@
     </ul>
   </div>
 
-  <footer>
+ <footer>
     <p class='footp'>Charlie Tharin</p>
-    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
+    <p class='footp'>Email: cbtharin@gmail.com</p>
+    <p class='footp'>Phone: 702-292-3345</p>
   </footer>
 
 </body>
