--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Charlie's Print Shop</title>
+    <meta charset="UTF-8">
+  <!-- fix view for different devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
   <style>
     body {
@@ -100,6 +103,7 @@
       font-size: 1rem;
       line-height: 1.5;
       color: #ddd;
+      text-align: center;
     }
     
     .footp {
@@ -165,7 +169,7 @@
 
 <body>
   <h1><u>Charlie's Print Shop</u></h1>
-  <p>3D-Print and Design Commisions</p>
+  <p>Welcome to my website! I would like to use this place to store information about various projects I am working on and have completed</p>
    
   
   <div class="image-row">
